# stock-analysis-platform

./: .gitignore  LICENSE  Makefile  README.md  agents.py  app.py  main.py  pyproject.toml  setup.py
results/: AAPL.md  AAPL_news.json  NVDA.md  NVDA_news.json
services/: company_news_fetcher.py  web_searcher.py  yahoo_fundamental_analyser.py  yahoo_fundamental_analyzer.py  yahoo_news_fetcher.py
services/reddit/: reddit_client.py  reddit_sentiment.py  sentiment_analyser.py  sentiment_analyzer.py
src/: agents.py  app.py
src/services/: alpha_vantage_fundamental_analyser.py  yahoo_analysis_fetcher.py  yahoo_fundamental_analyser.py  yahoo_news_fetcher.py  yahoo_technical_analyser.py
src/services/reddit/: reddit_client.py  reddit_sentiment.py
src/tools/: alpha_vantage_fundamental_analysis_tool.py  reddit_sentiment_analysis_tool.py  yahoo_analysis_tool.py  yahoo_fundamental_analysis_tool.py  yahoo_news_tool.py  yahoo_technical_analysis_tool.py
tools/: alpha_vantage_fundamental_analysis_tool.py  company_news_tool.py  reddit_sentiment_analysis_tool.py  reddit_sentiment_analyzer_tool.py  stock_news_tool.py  web_search_tool.py  yahoo_analysis_tool.py  yahoo_fundamental_analysis_tool.py  yahoo_news_tool.py  yahoo_technical_analysis_tool.py
