[project]
name = "nlp-2025l"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai>=0.119.0",
    "finnhub-python>=2.4.23",
    "praw>=7.8.1",
    "torch>=2.7.0",
    "transformers>=4.51.3",
    "yfinance>=0.2.61",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "W"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
